; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_soap.c_get_fault_type.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_soap.c_get_fault_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOKEN_XMLRPC_FAULTCODE = common dso_local global i32 0, align 4
@TOKEN_XMLRPC_FAULTSTRING = common dso_local global i32 0, align 4
@TOKEN_SOAP_FAULTCODE = common dso_local global i32 0, align 4
@TOKEN_SOAP_FAULTSTRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_fault_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_fault_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @TOKEN_XMLRPC_FAULTCODE, align 4
  %6 = call i64 @XMLRPC_VectorGetValueWithID(i32 %4, i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @TOKEN_XMLRPC_FAULTSTRING, align 4
  %11 = call i64 @XMLRPC_VectorGetValueWithID(i32 %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %27

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @TOKEN_SOAP_FAULTCODE, align 4
  %17 = call i64 @XMLRPC_VectorGetValueWithID(i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %14
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @TOKEN_SOAP_FAULTSTRING, align 4
  %22 = call i64 @XMLRPC_VectorGetValueWithID(i32 %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %19
  store i32 2, i32* %2, align 4
  br label %27

25:                                               ; preds = %19, %14
  br label %26

26:                                               ; preds = %25
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %24, %13
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @XMLRPC_VectorGetValueWithID(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
